--- a/backend/views/Home.hbs
+++ b/backend/views/Home.hbs
@@ -8,13 +8,18 @@
         body{
             background-color: #121920;
         }
+        .profile{
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+        }
     </style>
     <title>Home</title>
 </head>
 <body >
    {{> Navbar}}
     <div class="profile"> 
-       welcome home
+        <h3>Welcome to Flight Booking System</h3>
     </div>
 </body>
 </html>
