--- a/backend/views/Admin/AddFlights.hbs
+++ b/backend/views/Admin/AddFlights.hbs
@@ -39,11 +39,23 @@
      const form=document.getElementById("form");
      document.addEventListener("submit",async (e)=>{
           e.preventDefault();
+
+          const formData = new FormData(form);
+          const payload = {};
+          for (let [key, value] of formData.entries()) {
+          payload[key] = value;
+          }
+
           const result= await fetch("api/v1/admin/flights/new",{
                method: "POST",
-               body: JSON.stringify(form),
+                 headers: {
+                         'Content-Type': 'application/json'
+               },
+               body: JSON.stringify(payload),
           });
+          
           if ( !result.ok){
+                    console.log(result.toString());
                     alert("Those Flights Can't be added!\nKindly Refresh the page");
           }
           window.location.reload();
