--- a/backend/views/Shared/Navbar.hbs
+++ b/backend/views/Shared/Navbar.hbs
@@ -2,7 +2,7 @@
  <nav class="Navbar">
         <ul>
             <li><a href="Home" >Home</a></li>
-             <li><a href="Search" >Search Flights</a></li> 
+             {{!-- <li><a href="Search" >Search Flights</a></li>  --}}
              <li><a href="Booking" >Book Flights</a></li> 
              <li><a href="BookingDetails" >My Bookings </a></li> 
             {{#if Name}}
