--- a/backend/views/FindBookings.hbs
+++ b/backend/views/FindBookings.hbs
@@ -31,6 +31,7 @@
 <script>
      const bookingsList = document.querySelector('#bookingsList');
      function updateList(bookings) {
+          console.log(bookings)
           bookingList.innerHTML = "";
           bookings.forEach(function(booking, index) {
                          const row = document.createElement("tr");
