--- a/backend/views/Booking.hbs
+++ b/backend/views/Booking.hbs
@@ -132,15 +132,22 @@
                               const result = await fetch('/api/v1/booking/new', {
                                    method: 'POST',
                                    headers: {
-                                        'Content-Type': 'application/json'
+                                        'Content-Type': 'application/json',
+                                        'Accept': 'application/json'
                                    },
                                    body: JSON.stringify(obj)
                               })
                               
-                              if ( !result.ok){
+                              if(result.redirected){
+                                   alert("Please Login First");
+                                   return window.location.href = result.url;
+                              }
+
+                              if ( !result.ok){                                   
                                    alert("Those Ticket are already booked!\nKindly Refresh the page");
                               }
-                                   window.location.reload();                                                                  
+                              window.location.reload();       
+                              
                               
 
                }
@@ -174,32 +181,34 @@
 
           function renderData (flights,admin=false){
                const myflights =document.getElementById('myflights');
-               let res="";
-               console.log(flights);
+               let res="<h1 >No Flights found</h1>";
+               
                if(!flights || flights===undefined || flights.length==0) {
-                    res+="<h1 >No Flights found</h1>";                    
+                    res="<h1 >No Flights found</h1>";                    
                }else{
-
-                    flights.map((flight)=>{
-                         res+=`                       
-                         <li class="list-group-item">
-                              <h3 class="airline">Airline Name :${flight.airline}</h3>
-                              <p class="flight-number">Flight Number: ${flight.flightNumber}</p>
-                              <p class="departure">Departure: ${flight.departureCity}</p>
-                              <p class="destination">Destination: ${flight.destinationCity}</p>
-                              <p class="time">Departure Time: ${new Date(flight.departureDate).toDateString()} 
-                                   ${new Date(flight.departureDate).toLocaleTimeString(undefined, {  hour: 'numeric',  minute: 'numeric',  hour12: true})}
-                              </p>
-                              <p class="time">Arrival Time:${new Date(flight.arrivalDate).toDateString() }  
-                                   ${new Date(flight.arrivalDate).toLocaleTimeString(undefined, {  hour: 'numeric',  minute: 'numeric',  hour12: true})}
-                              </p>
-                              <p class="time">Available Seats: ${flight.availableSeats}</p>
-                              <a href="/Booking?flightId=${flight._id}" class="btn btn-primary">Booking</a>
-                              ${admin ? `<button class="btn btn-danger" onclick="removeFlightRequest('${flight._id}')">Remove Flight</button>` : ''}
-                              </li>
-                         `
-               })
+                         res=""
+                         flights.map((flight)=>{
+                              res+=`                       
+                              <li class="list-group-item">
+                                   <h3 class="airline">Airline Name :${flight.airline}</h3>
+                                   <p class="flight-number">Flight Number: ${flight.flightNumber}</p>
+                                   <p class="departure">Departure: ${flight.departureCity}</p>
+                                   <p class="destination">Destination: ${flight.destinationCity}</p>
+                                   <p class="time">Departure Time: ${new Date(flight.departureDate).toDateString()} 
+                                        ${new Date(flight.departureDate).toLocaleTimeString(undefined, {  hour: 'numeric',  minute: 'numeric',  hour12: true})}
+                                   </p>
+                                   <p class="time">Arrival Time:${new Date(flight.arrivalDate).toDateString() }  
+                                        ${new Date(flight.arrivalDate).toLocaleTimeString(undefined, {  hour: 'numeric',  minute: 'numeric',  hour12: true})}
+                                   </p>
+                                   <p class="time">Available Seats: ${flight.availableSeats}</p>
+                                   <a href="/Booking?flightId=${flight._id}" class="btn btn-primary">Booking</a>
+                                   ${admin ? `<button class="btn btn-danger" onclick="removeFlightRequest('${flight._id}')">Remove Flight</button>` : ''}
+                                   ${admin ? `<a class="btn btn-danger" href="UpdateFlights/${flight._id}">Update Flight</a>` : ''}
+                                   </li>
+                              `
+                    })
                }
+               
                myflights.innerHTML= res ;
 
                  
